#
#    TOM - To One Matching Compiler
#

javadir         = ${prefix}/classes/jtom/debug
stabledir 	= $(top_srcdir)/stable/jtom/debug

BOOTSOURCES	= TomDebugger.java TomDebugEnvironment.java\
                  TermHandler.java TomDebugStructure.java
java_JAVA       = $(BOOTSOURCES)
EXTRA_DIST 	= $(BOOTSOURCES)

include $(top_srcdir)/src/make_rules
